--- a/index.html
+++ b/index.html
@@ -46,14 +46,192 @@
       </header>
 
       <main>
-        <section class="item item1">item1</section>
-        <section class="item item2">item2</section>
-        <section class="item item3">item3</section>
-        <section class="item item4">item4</section>
-        <section class="item item5">item5</section>
-        <section class="item item6">item6</section>
-        <section class="item item7">item7</section>
-        <section class="item item8">item8</section>
+        <section id="card1" class="card hero">
+          <div class="hero__container">
+            <a href="#">
+              <div class="hero__content">
+                <div class="card__category">FINANCE</div>
+                <h3 class="card__title">
+                  This tie brand is <br class="mobile" />bucking the retail
+                  apocalypse with a massive store expansion
+                </h3>
+                <p class="card__preview">
+                  There is a lot of exciting stuff going on in the stars above
+                  us that make astronomy so much fun. The truth is the universe
+                  is a constantly changing, moving.
+                </p>
+              </div>
+              <div class="card__footer">
+                <div>
+                  <img src="./assets/icons/share.svg" alt="share icon" />
+                  <span>275</span>
+                </div>
+                <div>
+                  <img src="./assets/icons/view.svg" alt="view icon" />
+                  <span>275</span>
+                </div>
+                <div>
+                  <img src="./assets/icons/comment.svg" alt="comment icon" />
+                  <span>12</span>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="hero__controller">
+            <button id="hero__btn__prev">
+              <img src="./assets/icons/ArrowPrev.svg" alt="arrow left icon" />
+            </button>
+            <button id="hero__btn__next">
+              <img src="./assets/icons/ArrowNext.svg" alt="arrow right icon" />
+            </button>
+          </div>
+        </section>
+        <section id="card2" class="card">
+          <a href="#">
+            <div class="card__category">FINANCE</div>
+            <h3 class="card__title">
+              Unmatched Toner Cartridge Quality: 20% Less Than OEM Price
+            </h3>
+            <div class="card__footer">
+              <div>
+                <img src="./assets/icons/share.svg" alt="share icon" />
+                <span>275</span>
+              </div>
+              <div>
+                <img src="./assets/icons/view.svg" alt="view icon" />
+                <span>275</span>
+              </div>
+              <div>
+                <img src="./assets/icons/comment.svg" alt="comment icon" />
+                <span>12</span>
+              </div>
+            </div>
+          </a>
+        </section>
+        <section id="card3" class="card">
+          <a href="#">
+            <div class="card__category">ENTERTAINMENT</div>
+            <h3 class="card__title">
+              Here’s The Difference Between Used, Refurbished, Remarketed, And
+              Rebuilt Electronic Equipment
+            </h3>
+            <div class="card__footer">
+              <div>
+                <img src="./assets/icons/share.svg" alt="share icon" />
+                <span>275</span>
+              </div>
+              <div>
+                <img src="./assets/icons/view.svg" alt="view icon" />
+                <span>275</span>
+              </div>
+              <div>
+                <img src="./assets/icons/comment.svg" alt="comment icon" />
+                <span>12</span>
+              </div>
+            </div>
+          </a>
+        </section>
+        <section id="card4" class="card">
+          <a href="#">
+            <div class="card__category">FINANCE</div>
+            <h3 class="card__title">
+              Optimize Your PC’s Performance With These 3 Programs
+            </h3>
+            <div class="card__footer">
+              <div>
+                <img src="./assets/icons/share.svg" alt="share icon" />
+                <span>275</span>
+              </div>
+              <div>
+                <img src="./assets/icons/view.svg" alt="view icon" />
+                <span>275</span>
+              </div>
+              <div>
+                <img src="./assets/icons/comment.svg" alt="comment icon" />
+                <span>12</span>
+              </div>
+            </div>
+          </a>
+        </section>
+        <section id="card5" class="card">
+          <a href="#">
+            <div class="card__category">GAMING</div>
+            <h3 class="card__title">
+              Search Engine Optimization And Advertising
+            </h3>
+            <div class="card__footer">
+              <div>
+                <img src="./assets/icons/share.svg" alt="share icon" />
+                <span>275</span>
+              </div>
+              <div>
+                <img src="./assets/icons/view.svg" alt="view icon" />
+                <span>275</span>
+              </div>
+              <div>
+                <img src="./assets/icons/comment.svg" alt="comment icon" />
+                <span>12</span>
+              </div>
+            </div>
+          </a>
+        </section>
+        <section id="card6" class="card">
+          <a href="#">
+            <div class="card__category">TECHNOLOGY</div>
+            <h3 class="card__title">Where To Find Unique Myspace Layouts</h3>
+            <div class="card__footer">
+              <div>
+                <img src="./assets/icons/share.svg" alt="share icon" />
+                <span>275</span>
+              </div>
+              <div>
+                <img src="./assets/icons/view.svg" alt="view icon" />
+                <span>275</span>
+              </div>
+              <div>
+                <img src="./assets/icons/comment.svg" alt="comment icon" />
+                <span>12</span>
+              </div>
+            </div>
+          </a>
+        </section>
+        <section id="card7" class="article">
+          <h3 class="article__title">
+            This tie brand is bucking the retail apocalypse with a massive store
+            expansion
+          </h3>
+          <p class="article__preview">
+            The universe is constantly changing, moving. Some would say it’s a
+            “living” thing because you never know what you are going to see on
+            any given night.
+          </p>
+          <button class="Button Button__white">READ MORE</button>
+        </section>
+        <section id="card8" class="list">
+          <h4 class="list__title">Featured stories</h4>
+          <ul class="list__content">
+            <li class="list__item">
+              <span class="list__item__marker">1</span>
+              <a href="#"> Compare Prices: Find The Best Computer Accessory </a>
+            </li>
+            <li class="list__item">
+              <span class="list__item__marker">2</span>
+              <a href="#"> Why You Should Use External IT Support </a>
+            </li>
+            <li class="list__item">
+              <span class="list__item__marker">3</span>
+              <a href="#"> Why You Should Use In-House IT Support </a>
+            </li>
+            <li class="list__item">
+              <span class="list__item__marker">4</span>
+              <a href="#"> Choosing The Best Audio Player Software </a>
+            </li>
+            <li class="list__item">
+              <span class="list__item__marker">5</span>
+              <a href="#"> Addiction When Gambling Becomes A Problem </a>
+            </li>
+          </ul>
+        </section>
       </main>
 
       <footer class="footer">
